--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
+    "framer-motion": "^12.4.9",
+    "lucide-react": "^0.477.0",
+    "next": "15.2.0",
+    "next-themes": "^0.4.4",
+    "postprocessing": "^6.37.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
+    "react-tsparticles": "^2.12.2",
+    "shadcn-ui": "^0.9.5",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
