--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.9",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
